Updates to index menu contact and added deals page

--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,15 @@
     </style>
   </head>
   <body>
+    <!-- nav bar -->
     <nav class="nav">
       <p class="logo">Spylled Mylk</p>
       <a href="index.html"><p>Home</p></a>
       <a href="menu.html"><p>Menu</p></a>
+      <a href="deals.html"><p>Deals</p></a>
       <a href="contact.html"><p>Contact Us</p></a>
     </nav>
+
     <div class="container">
       <!-- <div class="name">-->
       <label for="fname"><h2>First Name</h2></label>
