--- a/deals.html
+++ b/deals.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Home | Spylled Mylk</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="deals.css" rel="stylesheet" type="text/css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Jost&family=Shrikhand&display=swap"
@@ -33,27 +33,6 @@
       <a href="deals.html"><p>Deals</p></a>
       <a href="contact.html"><p>Contact Us</p></a>
     </nav>
-
-    <!--hero image-->
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1 class="hero-title">Spylled Mylk</h1>
-        <p class="hero-subtitle">Milk finally worth crying over.</p>
-
-        <br />
-
-        <!--button-->
-        <form action="menu.html">
-          <input type="submit" value="Order Now!" />
-        </form>
-
-        <br />
-
-        <form action="deals.html">
-          <input type="submit" value="Current Deals!" />
-        </form>
-      </div>
-    </div>
 
     <!--footer-->
     <footer class="footer">
