--- a/menu.html
+++ b/menu.html
@@ -28,10 +28,12 @@
     </style>
   </head>
   <body>
+    <!-- nav bar -->
     <nav class="nav">
       <p class="logo">Spylled Mylk</p>
       <a href="index.html"><p>Home</p></a>
       <a href="menu.html"><p>Menu</p></a>
+      <a href="deals.html"><p>Deals</p></a>
       <a href="contact.html"><p>Contact Us</p></a>
     </nav>
 
