updated semantic html on almost all pages

--- a/contact.html
+++ b/contact.html
@@ -75,14 +75,14 @@
       <textarea
         id="subject"
         name="subject"
-        placeholder="Tell us or ask us something here!"
+        placeholder="Talk to us!"
         style="height: 200px"
       ></textarea>
 
       <input type="submit" value="Submit" />
     </div>
 
-    <footer class="footer">
+    <footer>
       <div class="icons">
         <ul class="footer menu">
           <li>
