--- a/index.html
+++ b/index.html
@@ -60,15 +60,33 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a
+              href="https://www.facebook.com/"
+              class="fa fa-facebook"
+              alt="Facebook"
+            ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a
+              href="https://www.instagram.com/"
+              class="fa fa-instagram"
+              alt="Instagram"
+            ></a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a
+              href="https://twitter.com/?lang=en"
+              class="fa fa-twitter"
+              alt="Twitter"
+            ></a>
           </li>
-          <li><a href="https://www.youtube.com/" class="fa fa-youtube"></a></li>
+          <li>
+            <a
+              href="https://www.youtube.com/"
+              class="fa fa-youtube"
+              alt="YouTube"
+            ></a>
+          </li>
         </ul>
       </div>
     </footer>
