Updated sematic html on all pages and added headers to contact, deals, and menu pages

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@
       <a href="contact.html"><p>Contact Us</p></a>
     </nav>
 
+    <header>Contact Form</header>
+
     <div class="container">
       <!-- <div class="name">-->
       <label for="fname"><h2>First Name</h2></label>
