--- a/deals.html
+++ b/deals.html
@@ -40,23 +40,23 @@
     <div class="deals">
       <!--coupon 1-->
       <div class="coupon">
-        <div class="coupon-brand">
+        <section">
           <h3>Spylled Mylk</h3>
-        </div>
+        </section>
         <img
           src="https://img.freepik.com/premium-photo/glass-milk-cookies-isolated-white_62856-3218.jpg"
           alt="glass of milk and two cookies"
         />
-        <div class="coupon-title">
+        <figcaption>
           <h2>Mylk + Cookies Deal</h2>
           <p>
             A childhood classic being offered for this month! Purchase any of
             our mylks and get (6) vegan mini chocolate chip cookies for $2 extra
             with this coupon!
           </p>
-        </div>
+        </figcaption>
         <div class="coupon-text">
-          <p>Use Promo Code: <span class="promo">COOKIE</span></p>
+          <p>Use Promo Code: <mark>COOKIE</mark></p>
           <p class="expire">Expires: September 30th, 2022</p>
         </div>
       </div>
@@ -65,23 +65,23 @@
 
       <!--coupon 2-->
       <div class="coupon">
-        <div class="coupon-brand">
+        <section>
           <h3>Spylled Mylk</h3>
-        </div>
+        </section>
         <img
           src="https://cdn-fsly.yottaa.net/55df7e1a2bb0ac7d800040c2/o~f_webp/v~4b.168.0.0/https://www.containerstore.com/catalogimages/248991/10065751GlassMilkBottle8ozV2_600.jpg?width=1200&height=1200&align=center"
           alt="5 empty milk bottles and 1 milk bottle partially filled"
         />
-        <div class="coupon-title">
+        <figcaption>
           <h2>6 Mylks for $20</h2>
           <p>
             Get 6 delicious bottles of vanilla soy, coconut, or almond mylk for
             only $20! This deal cannot be used with any of the other mylk bases
             or flavors.
           </p>
-        </div>
+        </figcaption>
         <div class="coupon-text">
-          <p>Use Promo Code: <span class="promo">GET6</span></p>
+          <p>Use Promo Code: <mark>GET6</mark></p>
           <p class="expire">Expires: September 30th, 2022</p>
         </div>
       </div>
