--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <!--footer-->
-    <footer class="footer">
+    <footer>
       <div class="icons">
         <ul class="footer menu">
           <li>
