all pages html and css validated with lighthouse reports in 90s

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Jost&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
@@ -38,7 +37,7 @@
 
     <div class="container">
       <!-- <div class="name">-->
-      <label for="fname"><h2>First Name</h2></label>
+      <label for="fname">First Name</label>
       <input
         type="text"
         id="fname"
@@ -46,7 +45,9 @@
         placeholder="First Name Here"
       />
 
-      <label for="lname"><h2>Last Name</h2></label>
+      <br />
+
+      <label for="lname">Last Name</label>
       <input
         type="text"
         id="lname"
@@ -54,8 +55,10 @@
         placeholder="Last Name Here"
       />
       <!--</div>-->
+      <br />
+      <br />
 
-      <label for="email"><h2>Email</h2></label>
+      <label for="email">Email</label>
       <input
         type="text"
         id="email"
@@ -63,8 +66,9 @@
         placeholder="Email Address Here"
       />
       <br />
+      <br />
 
-      <label for="inquirytype"><h2>Inquiry Type</h2></label>
+      <label for="inquirytype">Inquiry Type</label>
       <select id="inquirytype" name="inquirytype">
         <option value="suggestions">Suggestions</option>
         <option value="catering">Catering</option>
@@ -73,7 +77,10 @@
         <option value="other">Other</option>
       </select>
 
-      <label for="subject"><h2>Subject</h2></label>
+      <br />
+      <br />
+
+      <label for="subject">Subject</label>
       <textarea
         id="subject"
         name="subject"
