--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Home | Spylled Mylk</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Jost&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
@@ -60,32 +59,16 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a
-              href="https://www.facebook.com/"
-              class="fa fa-facebook"
-              alt="Facebook"
-            ></a>
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
           </li>
           <li>
-            <a
-              href="https://www.instagram.com/"
-              class="fa fa-instagram"
-              alt="Instagram"
-            ></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
           </li>
           <li>
-            <a
-              href="https://twitter.com/?lang=en"
-              class="fa fa-twitter"
-              alt="Twitter"
-            ></a>
+            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
           </li>
           <li>
-            <a
-              href="https://www.youtube.com/"
-              class="fa fa-youtube"
-              alt="YouTube"
-            ></a>
+            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
           </li>
         </ul>
       </div>
