--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Jost&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
@@ -54,7 +53,7 @@
       </header>
 
       <!-- row start -->
-      <section>
+      <div class="section">
         <!--item start-->
         <div class="box">
           <figure>
@@ -64,8 +63,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Cup</figcaption>
-            <figcaption>$0.50</figcaption>
+            <p class="menu_item">Cup</p>
+            <p class="menu_item">$0.50</p>
           </div>
         </div>
         <!-- item end -->
@@ -78,8 +77,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Carton</figcaption>
-            <figcaption>$0.50</figcaption>
+            <p class="menu_item">Carton</p>
+            <p class="menu_item">$0.50</p>
           </div>
         </div>
 
@@ -91,8 +90,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Bottle</figcaption>
-            <figcaption>$1</figcaption>
+            <p class="menu_item">Bottle</p>
+            <p class="menu_item">$1</p>
           </div>
         </div>
 
@@ -104,13 +103,13 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Mug</figcaption>
-            <figcaption>$3</figcaption>
+            <p class="menu_item">Mug</p>
+            <p class="menu_item">$3</p>
           </div>
         </div>
 
         <!--menu section end -->
-      </section>
+      </div>
 
       <br />
 
@@ -125,7 +124,7 @@
         </p>
       </header>
 
-      <section>
+      <div class="section">
         <div class="box">
           <figure>
             <img
@@ -134,8 +133,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Soy</figcaption>
-            <figcaption>$2</figcaption>
+            <p class="menu_item">Soy</p>
+            <p class="menu_item">$2</p>
           </div>
         </div>
 
@@ -147,8 +146,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Coconut</figcaption>
-            <figcaption>$2</figcaption>
+            <p class="menu_item">Coconut</p>
+            <p class="menu_item">$2</p>
           </div>
         </div>
 
@@ -160,8 +159,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Almond</figcaption>
-            <figcaption>$2</figcaption>
+            <p class="menu_item">Almond</p>
+            <p class="menu_item">$2</p>
           </div>
         </div>
 
@@ -173,12 +172,12 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Oat</figcaption>
-            <figcaption>$3</figcaption>
+            <p class="menu_item">Oat</p>
+            <p class="menu_item">$3</p>
           </div>
         </div>
         <!--end menu section -->
-      </section>
+      </div>
 
       <br />
 
@@ -193,7 +192,7 @@
         </p>
       </header>
 
-      <section>
+      <div class="section">
         <!--item start-->
         <div class="box">
           <figure>
@@ -203,8 +202,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Cashew</figcaption>
-            <figcaption>$4</figcaption>
+            <p class="menu_item">Cashew</p>
+            <p class="menu_item">$4</p>
           </div>
         </div>
         <!--item end-->
@@ -217,8 +216,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Sunflower Seed</figcaption>
-            <figcaption>$4.50</figcaption>
+            <p class="menu_item">Sunflower Seed</p>
+            <p class="menu_item">$4.50</p>
           </div>
         </div>
 
@@ -230,8 +229,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Flax</figcaption>
-            <figcaption>$5</figcaption>
+            <p class="menu_item">Flax</p>
+            <p class="menu_item">$5</p>
           </div>
         </div>
 
@@ -243,12 +242,12 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Hemp</figcaption>
-            <figcaption>$5</figcaption>
+            <p class="menu_item">Hemp</p>
+            <p class="menu_item">$5</p>
           </div>
         </div>
         <!-- end of menu section -->
-      </section>
+      </div>
 
       <!-- new menu section -->
       <header>
@@ -261,7 +260,7 @@
         </p>
       </header>
 
-      <section>
+      <div class="section">
         <!--item start -->
         <div class="box">
           <figure>
@@ -271,8 +270,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Original</figcaption>
-            <figcaption>Free!</figcaption>
+            <p class="menu_item">Original</p>
+            <p class="menu_item">Free!</p>
           </div>
         </div>
 
@@ -284,8 +283,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Vanilla</figcaption>
-            <figcaption>$1</figcaption>
+            <p class="menu_item">Vanilla</p>
+            <p class="menu_item">$1</p>
           </div>
         </div>
 
@@ -297,8 +296,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Chocolate</figcaption>
-            <figcaption>$1</figcaption>
+            <p class="menu_item">Chocolate</p>
+            <p class="menu_item">$1</p>
           </div>
         </div>
 
@@ -310,13 +309,13 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Strawberry</figcaption>
-            <figcaption>$1.50</figcaption>
+            <p class="menu_item">Strawberry</p>
+            <p class="menu_item">$1.50</p>
           </div>
         </div>
 
         <!--menu section end-->
-      </section>
+      </div>
 
       <!--new menu section -->
       <header>
@@ -328,7 +327,7 @@
         </p>
       </header>
 
-      <section>
+      <div class="section">
         <!--item start-->
         <div class="box">
           <figure>
@@ -338,8 +337,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Banana</figcaption>
-            <figcaption>$2</figcaption>
+            <p class="menu_item">Banana</p>
+            <p class="menu_item">$2</p>
           </div>
         </div>
         <!--item end-->
@@ -352,8 +351,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Mint Chocolate</figcaption>
-            <figcaption>$2.50</figcaption>
+            <p class="menu_item">Mint Chocolate</p>
+            <p class="menu_item">$2.50</p>
           </div>
         </div>
 
@@ -365,8 +364,8 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Coffee</figcaption>
-            <figcaption>$2.50</figcaption>
+            <p class="menu_item">Coffee</p>
+            <p class="menu_item">$2.50</p>
           </div>
         </div>
 
@@ -378,13 +377,13 @@
             />
           </figure>
           <div class="caption">
-            <figcaption>Cotton Candy</figcaption>
-            <figcaption>$2.50</figcaption>
+            <p class="menu_item">Cotton Candy</p>
+            <p class="menu_item">$2.50</p>
           </div>
         </div>
 
         <!--end menu section -->
-      </section>
+      </div>
       <!--end of menu -->
     </div>
 
@@ -395,32 +394,16 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a
-              href="https://www.facebook.com/"
-              class="fa fa-facebook"
-              alt="Facebook"
-            ></a>
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
           </li>
           <li>
-            <a
-              href="https://www.instagram.com/"
-              class="fa fa-instagram"
-              alt="Instagram"
-            ></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
           </li>
           <li>
-            <a
-              href="https://twitter.com/?lang=en"
-              class="fa fa-twitter"
-              alt="Twitter"
-            ></a>
+            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
           </li>
           <li>
-            <a
-              href="https://www.youtube.com/"
-              class="fa fa-youtube"
-              alt="YouTube"
-            ></a>
+            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
           </li>
         </ul>
       </div>
