All pages validated and 100 in accessibility and over 90 in performance and best practices

--- a/deals.html
+++ b/deals.html
@@ -38,7 +38,7 @@
     <br />
     <div class="deals">
       <!--coupon 1-->
-      <div class="coupon">
+      <section>
         <div class="brand">
           <h3>Spylled Mylk</h3>
         </div>
@@ -58,12 +58,12 @@
           <p>Use Promo Code: <mark>COOKIE</mark></p>
           <p class="expire">Expires: September 30th, 2022</p>
         </div>
-      </div>
-
+      </section>
+      <!--end of coupon-->
       <br />
 
       <!--coupon 2-->
-      <div class="coupon">
+      <section>
         <div class="brand">
           <h3>Spylled Mylk</h3>
         </div>
@@ -83,7 +83,9 @@
           <p>Use Promo Code: <mark>GET6</mark></p>
           <p class="expire">Expires: September 30th, 2022</p>
         </div>
-      </div>
+      </section>
+      <!--end of coupon-->
+      <!--end of deals-->
     </div>
 
     <br />
@@ -92,15 +94,33 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a
+              href="https://www.facebook.com/"
+              aria-label="Facebook"
+              class="fa fa-facebook"
+            ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a
+              href="https://www.instagram.com/"
+              aria-label="Instagram"
+              class="fa fa-instagram"
+            ></a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a
+              href="https://twitter.com/?lang=en"
+              aria-label="Twitter"
+              class="fa fa-twitter"
+            ></a>
           </li>
-          <li><a href="https://www.youtube.com/" class="fa fa-youtube"></a></li>
+          <li>
+            <a
+              href="https://www.youtube.com/"
+              aria-label="YouTube"
+              class="fa fa-youtube"
+            ></a>
+          </li>
         </ul>
       </div>
     </footer>
