--- a/index.html
+++ b/index.html
@@ -59,16 +59,32 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a
+              href="https://www.facebook.com/"
+              aria-label="Facebook"
+              class="fa fa-facebook"
+            ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a
+              href="https://www.instagram.com/"
+              aria-label="Instagram"
+              class="fa fa-instagram"
+            ></a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a
+              href="https://twitter.com/?lang=en"
+              aria-label="Twitter"
+              class="fa fa-twitter"
+            ></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+            <a
+              href="https://www.youtube.com/"
+              aria-label="YouTube"
+              class="fa fa-youtube"
+            ></a>
           </li>
         </ul>
       </div>
