--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
       mint chocolate, coffee) are 100% organic & sustainably sourced.
     </p>
 
-    <div class="menu">
+    <section>
       <!--part one / header-->
       <header>
         <h2>1. Pick a Container</h2>
@@ -385,7 +385,7 @@
         <!--end menu section -->
       </div>
       <!--end of menu -->
-    </div>
+    </section>
 
     <br />
 
@@ -394,16 +394,32 @@
       <div class="icons">
         <ul class="footer menu">
           <li>
-            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a
+              href="https://www.facebook.com/"
+              aria-label="Facebook"
+              class="fa fa-facebook"
+            ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a
+              href="https://www.instagram.com/"
+              aria-label="Instagram"
+              class="fa fa-instagram"
+            ></a>
           </li>
           <li>
-            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a
+              href="https://twitter.com/?lang=en"
+              aria-label="Twitter"
+              class="fa fa-twitter"
+            ></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+            <a
+              href="https://www.youtube.com/"
+              aria-label="YouTube"
+              class="fa fa-youtube"
+            ></a>
           </li>
         </ul>
       </div>
