--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu | Spylled Mylk</title>
-    <link href="menu.css" rel="stylesheet" type="text/css" />
+    <link href="menu.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,13 +16,13 @@
     />
     <style>
       h1 {
-        font-family: "Shrikhand", cursive;
+        font-family: 'Shrikhand', cursive;
       }
       h2 {
-        font-family: "Jost", sans-serif;
+        font-family: 'Jost', sans-serif;
       }
       p {
-        font-family: "Jost", sans-serif;
+        font-family: 'Jost', sans-serif;
       }
     </style>
   </head>
